Updrage to JDK 10