@@ -1,6 +1,5 @@
 package owl.translations.rabinizer;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.immutables.value.Value;
 import owl.ltl.EquivalenceClass;
@@ -12,7 +11,7 @@ abstract class MonitorState {
   abstract List<EquivalenceClass> formulaRanking();
 
   static MonitorState of(EquivalenceClass initialClass) {
-    return MonitorStateTuple.create(ImmutableList.of(initialClass));
+    return MonitorStateTuple.create(List.of(initialClass));
   }
 
   static MonitorState of(List<EquivalenceClass> ranking) {
